refactor: extract PostEntityValidator from PostService