@@ -6,15 +6,14 @@ import algo.module.Posts;
 import algo.repository.PostRepository;
 import algo.security.HtmlSanitizer;
 import algo.services.exceptions.PostNotFoundException;
-import algo.services.exceptions.PostValidationException;
+import algo.validation.PostEntityValidator;
 import jakarta.transaction.Transactional;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.stereotype.Service;
-
 import java.time.Clock;
 import java.time.LocalDateTime;
 import java.util.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
 
 /** Service for managing posts. */
 @Service
@@ -23,20 +22,24 @@ public class PostService {
   /** Repository for Post persistence operations. */
   private final PostRepository postRepository;
 
+  /** Class for Post validation operations. */
+  private final PostEntityValidator validator;
+
   /** Time source used for evaluating active windows. */
   private final Clock clock = Clock.systemDefaultZone();
 
   /** List of post types that function as temporary modals or pop-ups. */
-  private static final List<PostType> TEMP_TYPES = List.of(
-    PostType.TEMP, PostType.TEMP_STANDARD, PostType.TEMP_NEWS);
+  private static final List<PostType> TEMP_TYPES =
+      List.of(PostType.TEMP, PostType.TEMP_STANDARD, PostType.TEMP_NEWS);
 
   /**
    * Creates service with required repository dependency.
    *
    * @param repository post repository
    */
-  public PostService(final PostRepository repository) {
+  public PostService(final PostRepository repository, PostEntityValidator validator) {
     this.postRepository = repository;
+    this.validator = validator;
   }
 
   /**
@@ -47,7 +50,7 @@ public class PostService {
    */
   @Transactional
   public Posts save(final Posts entity) {
-      validatePostData(entity);
+    validator.validatePostData(entity);
 
     for (PostTranslation translation : entity.getTranslations()) {
       translation.setShortDescription(HtmlSanitizer.sanitize(translation.getShortDescription()));
@@ -67,11 +70,9 @@ public class PostService {
   @Transactional
   public Posts update(final Long postId, final Posts mergedEntity) {
     final Posts existing =
-        postRepository
-            .findWithTranslationsByPostId(postId)
-            .orElseThrow(() -> postNotFound(postId));
+        postRepository.findWithTranslationsByPostId(postId).orElseThrow(() -> postNotFound(postId));
 
-    validatePostData(mergedEntity);
+    validator.validatePostData(mergedEntity);
 
     existing.setPostType(mergedEntity.getPostType());
     existing.setEventDate(mergedEntity.getEventDate());
@@ -112,9 +113,7 @@ public class PostService {
   @Transactional
   public Posts getOne(final Long postId) {
     final Posts entity =
-        postRepository
-            .findWithTranslationsByPostId(postId)
-            .orElseThrow(() -> postNotFound(postId));
+        postRepository.findWithTranslationsByPostId(postId).orElseThrow(() -> postNotFound(postId));
 
     return entity;
   }
@@ -141,9 +140,7 @@ public class PostService {
   @Transactional
   public Page<Posts> list(final Pageable pageable, final PostType type, final boolean onlyActive) {
 
-    final List<PostType> types = (type == null)
-            ? Arrays.asList(PostType.values())
-            : List.of(type);
+    final List<PostType> types = (type == null) ? Arrays.asList(PostType.values()) : List.of(type);
 
     final Page<Posts> result;
     if (onlyActive) {
@@ -155,188 +152,33 @@ public class PostService {
     return result;
   }
 
-    /**
-     * Main validation method for posts based on business type.
-     *
-     * @param entity post entity to validate
-     */
-    private void validatePostData(final Posts entity) {
-        final PostType type = entity.getPostType();
-        final Map<String, String> errs = new HashMap<>();
+  /** Returns all posts that are NOT modals (Standard and News). */
+  @Transactional()
+  public List<Posts> getNonTempPosts() {
+    return postRepository.findAllByPostTypeNotIn(TEMP_TYPES);
+  }
 
-        if (type == null) {
-            throw new IllegalArgumentException("PostType cannot be null.");
-        }
+  /** Returns only news articles (excluding temp news). */
+  @Transactional()
+  public List<Posts> getNewsOnly() {
+    return postRepository.findAllByPostTypeIn(List.of(PostType.NEWS));
+  }
 
-        if (type.name().startsWith("TEMP")) {
-            validateTempDates(entity, errs);
-        }
+  /** Returns all modal-type posts (active and planned). */
+  @Transactional()
+  public List<Posts> getAllTempPosts() {
+    return postRepository.findAllByPostTypeIn(TEMP_TYPES);
+  }
 
-        switch (type) {
-            case STANDARD, NEWS -> {
-                validateStandardFields(entity, errs);
-                validateFullTranslations(entity, errs);
-            }
-            case TEMP -> {
-                requireNotBlank(entity.getThumbnailUrl(), "thumbnailUrl", errs);
-                validateBasicTranslations(entity, errs);
-            }
-            case TEMP_STANDARD, TEMP_NEWS -> {
-                validateStandardFields(entity, errs);
-                validateFullTranslations(entity, errs);
-            }
-        }
-
-        if (!errs.isEmpty()) {
-            throw new PostValidationException(errs);
-        }
-    }
-
-    /**
-     * Validates fields required for standard and news post types.
-     *
-     * @param entity post entity to validate
-     * @param errs map to store validation errors
-     */
-    private void validateStandardFields(
-            final Posts entity, final Map<String, String> errs) {
-        requireNotNull(entity.getEventDate(), "eventDate", errs);
-        requireNotBlank(entity.getThumbnailUrl(), "thumbnailUrl", errs);
-        requireNotBlank(entity.getImageUrls(), "imageUrls", errs);
-    }
-
-    /**
-     * Validates post start and end dates based on its type.
-     *
-     * @param entity post entity to validate
-     * @param errs map to store validation errors
-     */
-    private void validateTempDates(
-            final Posts entity, final Map<String, String> errs) {
-        requireNotNull(entity.getStartsAt(), "startsAt", errs);
-        requireNotNull(entity.getExpiresAt(), "expiresAt", errs);
-
-        if (entity.getStartsAt() != null && entity.getExpiresAt() != null
-                && entity.getExpiresAt().isBefore(entity.getStartsAt())) {
-            errs.put("expiresAt", "expiresAt must be >= startsAt.");
-        }
-    }
-
-    /**
-     * Basic translation validation (title and full description).
-     *
-     * @param entity post entity to validate
-     * @param errs map to store validation errors
-     */
-    private void validateBasicTranslations(
-            final Posts entity, final Map<String, String> errs) {
-        if (!checkTranslationsExist(entity, errs)) {
-            return;
-        }
-
-        int i = 0;
-        for (final var t : entity.getTranslations()) {
-            requireNotBlank(t.getTitle(), "translations[" + i + "].title", errs);
-            requireNotBlank(
-                    t.getFullDescription(), "translations[" + i + "].fullDesc", errs);
-            i++;
-        }
-    }
-
-    /**
-     * Full translation validation (includes short description).
-     *
-     * @param entity post entity to validate
-     * @param errs map to store validation errors
-     */
-    private void validateFullTranslations(
-            final Posts entity, final Map<String, String> errs) {
-        if (!checkTranslationsExist(entity, errs)) {
-            return;
-        }
-
-        int i = 0;
-        for (final var t : entity.getTranslations()) {
-            requireNotBlank(t.getTitle(), "translations[" + i + "].title", errs);
-            requireNotBlank(
-                    t.getFullDescription(), "translations[" + i + "].fullDesc", errs);
-            requireNotBlank(
-                    t.getShortDescription(), "translations[" + i + "].shortDesc", errs);
-            i++;
-        }
-    }
-
-    /**
-     * Ensures that the post has at least one translation.
-     *
-     * @param entity post entity to check
-     * @param errs map to store validation errors
-     * @return true if translations exist, false otherwise
-     */
-    private boolean checkTranslationsExist(
-            final Posts entity, final Map<String, String> errs) {
-        if (entity.getTranslations() == null || entity.getTranslations().isEmpty()) {
-            errs.put("translations", "At least one translation required.");
-            return false;
-        }
-        return true;
-    }
-
-    /**
-     * Checks if the provided object is not null.
-     *
-     * @param value the object to check
-     * @param fieldName name of the field for the error message
-     * @param errs map to store validation errors
-     */
-    private void requireNotNull(
-            final Object value, final String fieldName, final Map<String, String> errs) {
-        if (value == null) {
-            errs.put(fieldName, "Field is required for this type.");
-        }
-    }
-
-    /**
-     * Checks if the string is not null and not blank.
-     *
-     * @param value the string to check
-     * @param fieldName name of the field for the error message
-     * @param errs map to store validation errors
-     */
-    private void requireNotBlank(
-            final String value, final String fieldName, final Map<String, String> errs) {
-        if (value == null || value.trim().isEmpty()) {
-            errs.put(fieldName, "Field cannot be blank for this type.");
-        }
-    }
-
-    /** Returns all posts that are NOT modals (Standard and News). */
-    @Transactional()
-    public List<Posts> getNonTempPosts() {
-        return postRepository.findAllByPostTypeNotIn(TEMP_TYPES);
-    }
-
-    /** Returns only news articles (excluding temp news). */
-    @Transactional()
-    public List<Posts> getNewsOnly() {
-        return postRepository.findAllByPostTypeIn(List.of(PostType.NEWS));
-    }
-
-    /** Returns all modal-type posts (active and planned). */
-    @Transactional()
-    public List<Posts> getAllTempPosts() {
-        return postRepository.findAllByPostTypeIn(TEMP_TYPES);
-    }
-
-    /** Returns the single most relevant active modal. */
-    @Transactional()
-    public Optional<Posts> getActiveModal() {
-        final LocalDateTime now = LocalDateTime.now();
-        return postRepository.findAllByPostTypeIn(TEMP_TYPES).stream()
-                .filter(p -> p.getStartsAt() != null && !p.getStartsAt().isAfter(now))
-                .filter(p -> p.getExpiresAt() != null && p.getExpiresAt().isAfter(now))
-                .max(Comparator.comparing(Posts::getStartsAt));
-    }
+  /** Returns the single most relevant active modal. */
+  @Transactional()
+  public Optional<Posts> getActiveModal() {
+    final LocalDateTime now = LocalDateTime.now();
+    return postRepository.findAllByPostTypeIn(TEMP_TYPES).stream()
+        .filter(p -> p.getStartsAt() != null && !p.getStartsAt().isAfter(now))
+        .filter(p -> p.getExpiresAt() != null && p.getExpiresAt().isAfter(now))
+        .max(Comparator.comparing(Posts::getStartsAt));
+  }
 
   /**
    * Creates a standardized not-found exception for posts.
